It's scsslint-bin not scss-lint-bin

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -73,22 +73,22 @@ flake8-extensions =
     flake8-quotes
     pep8-naming
 jshint = False
-jshint-bin = ${buildout:directory}/bin/jshint
+jshint-bin = ${buildout:bin-directory}/jshint
 jshint-suppress-warnings = False
 chameleon-lint = False
 xmllint = True
 return-status-codes = False
 # those options only take effect if the dependencies are installed
 dependencychecker = True
-dependencychecker-bin = ${buildout:directory}/bin/dependencychecker
+dependencychecker-bin = ${buildout:bin-directory}/dependencychecker
 importchecker = True
-importchecker-bin = ${buildout:directory}/bin/importchecker
+importchecker-bin = ${buildout:bin-directory}/importchecker
 find-untranslated = True
-i18ndude-bin = ${buildout:directory}/bin/i18ndude
+i18ndude-bin = ${buildout:bin-directory}/i18ndude
 scsslint = True
-scsslint-bin = ${buildout:directory}/bin/scss-lint
+scsslint-bin = ${buildout:bin-directory}/scss-lint
 zptlint = True
-zptlint-bin = ${buildout:directory}/bin/zptlint
+zptlint-bin = ${buildout:bin-directory}/zptlint
 
 [releaser]
 recipe = zc.recipe.egg
