Post-merge cleanup for #217 replaces autocheckouts with version pins

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -15,14 +15,8 @@ allow-picked-versions = true
 
 extensions = mr.developer
 auto-checkout =
-   i18ndude
-   importchecker
-   zc.buildout
 
 [sources]
-i18ndude = git https://github.com/gyst/i18ndude.git
-importchecker = git https://github.com/minddistrict/importchecker.git
-zc.buildout = git https://github.com/gyst/buildout.git
 
 
 [dependencychecker]
@@ -132,7 +126,8 @@ flake8-todo = 0.4
 gp.recipe.node = 0.12.7.1
 hexagonit.recipe.download = 1.7.1
 html5lib = 0.9999999
-i18ndude = 4.3
+i18ndude = 5.1
+importchecker = 2.0
 isort = 4.2.0
 lxml = 4.1.1
 manuel = 1.8.0
