--- a/buildout.cfg
+++ b/buildout.cfg
@@ -54,6 +54,7 @@ eggs = zest.releaser[recommended]
 [code-analysis]
 recipe = plone.recipe.codeanalysis
 directory = ${buildout:directory}/plone/recipe/codeanalysis
+overrides = code-analysis-overrides
 pre-commit-hook = True
 check-manifest = True
 clean-lines = True
