--- a/buildout.cfg
+++ b/buildout.cfg
@@ -54,8 +54,10 @@ eggs = zest.releaser[recommended]
 [code-analysis]
 recipe = plone.recipe.codeanalysis
 directory = ${buildout:directory}/plone/recipe/codeanalysis
-overrides = code-analysis-overrides
+return-status-codes = True
 pre-commit-hook = True
+pre-push-hook = True
+pre-push-return-status-codes = True
 check-manifest = True
 clean-lines = True
 csslint = False
@@ -72,7 +74,6 @@ jshint-bin = ${buildout:bin-directory}/jshint
 jshint-suppress-warnings = False
 chameleon-lint = False
 xmllint = True
-return-status-codes = False
 # those options only take effect if the dependencies are installed
 dependencychecker = True
 dependencychecker-bin = ${buildout:bin-directory}/dependencychecker
