Disable garbage dependencychecker in our own build. One should use `importchecker` instead.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -75,7 +75,7 @@ jshint-suppress-warnings = False
 chameleon-lint = False
 xmllint = True
 # those options only take effect if the dependencies are installed
-dependencychecker = True
+dependencychecker = False  # GIGO
 dependencychecker-bin = ${buildout:bin-directory}/dependencychecker
 importchecker = True
 importchecker-bin = ${buildout:bin-directory}/importchecker
