Suggest overrides naming policy

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -54,6 +54,7 @@ eggs = zest.releaser[recommended]
 [code-analysis]
 recipe = plone.recipe.codeanalysis
 directory = ${buildout:directory}/plone/recipe/codeanalysis
+overrides = code-analysis-overrides-plone
 return-status-codes = True
 pre-commit-hook = True
 pre-push-hook = True
