--- a/buildout.cfg
+++ b/buildout.cfg
@@ -66,10 +66,16 @@ flake8-max-complexity = 12
 flake8-extensions =
     flake8-blind-except
     flake8-coding
+    flake8-commas
     flake8-debugger
+    flake8-deprecated
     flake8-isort
+    flake8-pep3101
+    flake8-plone-hasattr
+    flake8-print
     flake8-quotes
-    pep8-naming
+    flake8-string-format
+    flake8-todo
 jshint = False
 jshint-bin = ${buildout:bin-directory}/jshint
 jshint-suppress-warnings = False
