--- a/buildout.cfg
+++ b/buildout.cfg
@@ -118,19 +118,19 @@ colorama = 0.3.3
 coverage = 3.7
 createcoverage = 1.4.1
 docutils = 0.12
-flake8 = 2.5.0
-flake8-blind-except = 0.1.0
-flake8-coding = 1.1.1
+flake8 = 3.3.0
+flake8-blind-except = 0.1.1
+flake8-coding = 1.3.0
+flake8-commas = 0.4.3
 flake8-debugger = 1.4.0
-flake8-deprecated = 1.0
-flake8-isort = 0.2
-flake8-pep3101 = 0.3
-flake8-plone-api = 1.0
-flake8-plone-hasattr = 0.1
+flake8-deprecated = 1.2
+flake8-isort = 2.2.1
+flake8-pep3101 = 1.1
+flake8-plone-hasattr = 0.2.post0
 flake8-print = 2.0.2
-flake8-quotes = 0.1.1
-flake8-string-format = 0.2.1
-flake8-todo = 0.4
+flake8-quotes = 0.11.0
+flake8-string-format = 0.2.3
+flake8-todo = 0.7
 gp.recipe.node = 0.12.7.1
 hexagonit.recipe.download = 1.7.1
 html5lib = 0.9999999
@@ -139,13 +139,14 @@ importchecker = 2.0
 isort = 4.2.0
 lxml = 4.1.1
 manuel = 1.8.0
-mccabe = 0.3.1
+mccabe = 0.6.1
 ordereddict = 1.1
 pep8 = 1.5.7
 pep8-naming = 0.3.3
 pkginfo = 1.2.1
 plone.i18n = 3.0.2
-pyflakes = 1.0.0
+pycodestyle = 2.3.1
+pyflakes = 1.5.0
 Pygments = 2.0.2
 pyroma = 1.8.3
 python-archive = 0.2
