Run readme check on py2 only.

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ install:
   - buildout -N -t 3 -c $CONF || buildout -N -t 3 -c $CONF
 script:
   - pip install docutils
-  - pip install Pygments
-  - python setup.py check -r -s
+  - if [ $PYTHON_VERSION == 2.7 ]; then pip install Pygments ; fi
+  - if [ $PYTHON_VERSON == 2.7 ]; then python setup.py check -r -s ; fi
   - bin/code-analysis
   - bin/test
 after_failure:
