Dogfood the multi-processing feature.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -58,6 +58,7 @@ overrides = code-analysis-overrides-plone
 return-status-codes = True
 pre-commit-hook = True
 pre-push-hook = True
+multiprocessing = True
 check-manifest = True
 clean-lines = True
 csslint = False
