Use revived rubygemsrecipe (no release yet). Update dependencies.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -15,9 +15,10 @@ allow-picked-versions = true
 
 extensions = mr.developer
 auto-checkout =
+  rubygemsrecipe
 
 [sources]
-
+rubygemsrecipe = git https://lab.nexedi.com/nexedi/rubygemsrecipe
 
 [dependencychecker]
 recipe = zc.recipe.egg
@@ -112,6 +113,7 @@ tqdm = 4.19.5
 
 # misc
 bleach = 1.4.2
+certifi = 2020.6.20
 chardet = 3.0.2
 check-manifest = 0.27
 colorama = 0.3.3
@@ -127,6 +129,7 @@ flake8-deprecated = 1.2
 flake8-isort = 2.2.1
 flake8-pep3101 = 1.1
 flake8-plone-hasattr = 0.2.post0
+flake8-polyfill = 1.0.2
 flake8-print = 2.0.2
 flake8-quotes = 0.11.0
 flake8-string-format = 0.2.3
@@ -135,11 +138,13 @@ gp.recipe.node = 0.12.7.1
 hexagonit.recipe.download = 1.7.1
 html5lib = 0.9999999
 i18ndude = 5.1
+idna = 2.6
 importchecker = 2.0
 isort = 4.2.0
 lxml = 4.1.1
 manuel = 1.8.0
 mccabe = 0.6.1
+mr.developer = 2.0.1
 ordereddict = 1.1
 pep8-naming = 0.3.3
 pkginfo = 1.2.1
@@ -156,9 +161,11 @@ readme-renderer = 0.7.0
 restructuredtext-lint = 0.12.2
 rubygemsrecipe = 0.2.2
 six = 1.10.0
+stdlib-list = 0.7.0
 testfixtures = 4.4.0
 transaction = 1.2.0
 Unidecode = 0.4.18
+urllib3 = 1.22
 wheel = 0.26.0
 z3c.dependencychecker = 2.0
 zdaemon = 4.2.0
@@ -180,14 +187,14 @@ zope.deprecation = 4.3.0
 zope.event = 4.3.0
 zope.exceptions = 4.2.0
 zope.i18n = 4.3.1
-zope.i18nmessageid = 4.1.0
+zope.i18nmessageid = 5.0.1
 zope.interface = 4.4.3
 zope.location = 4.0.3
 zope.pagetemplate = 4.3.0
 zope.proxy = 4.3.0
 zope.publisher = 4.3.2
 zope.schema = 4.5.0
-zope.security = 4.2.1
+zope.security = 5.1.1
 zope.tal = 4.3.0
 zope.tales = 4.2.0
 zope.testing = 4.5.0
