--- a/buildout.cfg
+++ b/buildout.cfg
@@ -15,10 +15,6 @@ allow-picked-versions = true
 
 extensions = mr.developer
 auto-checkout =
-  rubygemsrecipe
-
-[sources]
-rubygemsrecipe = git https://lab.nexedi.com/nexedi/rubygemsrecipe
 
 [dependencychecker]
 recipe = zc.recipe.egg
@@ -36,7 +32,6 @@ recipe = gp.recipe.node
 npms = csslint jshint jscs
 scripts = csslint jshint jscs
 
-# this fails on first buildout. So buildout twice.
 [rubygems]
 recipe = rubygemsrecipe
 gems = scss_lint scss_lint_reporter_checkstyle
@@ -135,11 +130,11 @@ flake8-quotes = 0.11.0
 flake8-string-format = 0.2.3
 flake8-todo = 0.7
 gp.recipe.node = 0.12.7.1
-hexagonit.recipe.download = 1.7.1
 html5lib = 0.9999999
 i18ndude = 5.1
 idna = 2.6
 importchecker = 2.0
+importlib-metadata = 2.0.0
 isort = 4.2.0
 lxml = 4.1.1
 manuel = 1.8.0
@@ -159,8 +154,9 @@ pytz = 2015.7
 readme = 0.6.0
 readme-renderer = 0.7.0
 restructuredtext-lint = 0.12.2
-rubygemsrecipe = 0.2.2
+rubygemsrecipe = 0.3.0
 six = 1.10.0
+slapos.recipe.build = 0.46
 stdlib-list = 0.7.0
 testfixtures = 4.4.0
 transaction = 1.2.0
@@ -170,7 +166,7 @@ wheel = 0.26.0
 z3c.dependencychecker = 2.0
 zdaemon = 4.2.0
 zc.recipe.cmmi = 1.3.6
-zc.recipe.egg = 2.0.3
+zc.recipe.egg = 2.0.6
 zc.recipe.testrunner = 2.0.0
 zc.rst2 = 0.2
 WebOb = 1.7.4
@@ -178,6 +174,7 @@ ZConfig = 3.2.0
 spirit.zptlint = 0.1
 zc.recipe.deployment = 1.3.0
 zc.zdaemonrecipe = 1.0.0
+zipp = 3.1.0
 zope.browser = 2.2.0
 zope.component = 4.4.1
 zope.configuration = 4.1.0
