--- a/buildout.cfg
+++ b/buildout.cfg
@@ -115,7 +115,9 @@ colorama = 0.3.3
 coverage = 3.7
 createcoverage = 1.4.1
 docutils = 0.12
-flake8 = 3.8.4
+# Don't upgrade to latest flake8, because it will pull in zipp, which doesn't
+# work on py2.7
+flake8 = 3.7.9
 flake8-blind-except = 0.1.1
 flake8-coding = 1.3.0
 flake8-commas = 0.4.3
@@ -134,7 +136,6 @@ html5lib = 0.9999999
 i18ndude = 5.1
 idna = 2.6
 importchecker = 2.0
-importlib-metadata = 2.0.0
 isort = 4.2.0
 lxml = 4.1.1
 manuel = 1.8.0
@@ -144,8 +145,8 @@ ordereddict = 1.1
 pep8-naming = 0.3.3
 pkginfo = 1.2.1
 plone.i18n = 3.0.2
-pycodestyle = 2.6.0
-pyflakes = 2.2.0
+pycodestyle = 2.5.0
+pyflakes = 2.1.1
 Pygments = 2.0.2
 pyroma = 1.8.3
 python-archive = 0.2
@@ -174,7 +175,6 @@ ZConfig = 3.2.0
 spirit.zptlint = 0.1
 zc.recipe.deployment = 1.3.0
 zc.zdaemonrecipe = 1.0.0
-zipp = 3.4.0
 zope.browser = 2.2.0
 zope.component = 4.4.1
 zope.configuration = 4.1.0
