--- a/buildout.cfg
+++ b/buildout.cfg
@@ -35,7 +35,6 @@ recipe = gp.recipe.node
 npms = csslint jshint jscs
 scripts = csslint jshint jscs
 
-# this fails on first buildout. So buildout twice.
 [rubygems]
 recipe = rubygemsrecipe
 gems = scss_lint scss_lint_reporter_checkstyle
@@ -58,6 +57,7 @@ overrides = code-analysis-overrides-plone
 return-status-codes = True
 pre-commit-hook = True
 pre-push-hook = True
+multiprocessing = True
 check-manifest = True
 clean-lines = True
 csslint = False
@@ -99,8 +99,8 @@ eggs =
 
 [versions]
 # keep them in sync with requirements.txt
-setuptools = 38.2.4
-zc.buildout = 2.11.0
+setuptools = 44.1.1
+zc.buildout = 2.13.3
 
 # release
 zest.releaser = 6.12.4
@@ -111,13 +111,17 @@ tqdm = 4.19.5
 
 # misc
 bleach = 1.4.2
+certifi = 2020.6.20
 chardet = 3.0.2
 check-manifest = 0.27
 colorama = 0.3.3
 coverage = 3.7
 createcoverage = 1.4.1
 docutils = 0.12
-flake8 = 3.3.0
+entrypoints = 0.3
+# Don't upgrade to latest flake8, because it will pull in zipp, which doesn't
+# work on py2.7
+flake8 = 3.7.9
 flake8-blind-except = 0.1.1
 flake8-coding = 1.3.0
 flake8-commas = 0.4.3
@@ -126,25 +130,27 @@ flake8-deprecated = 1.2
 flake8-isort = 2.2.1
 flake8-pep3101 = 1.1
 flake8-plone-hasattr = 0.2.post0
+flake8-polyfill = 1.0.2
 flake8-print = 2.0.2
 flake8-quotes = 0.11.0
 flake8-string-format = 0.2.3
 flake8-todo = 0.7
 gp.recipe.node = 0.12.7.1
-hexagonit.recipe.download = 1.7.1
 html5lib = 0.9999999
 i18ndude = 5.1
+idna = 2.6
 importchecker = 2.0
 isort = 4.2.0
 lxml = 4.1.1
 manuel = 1.8.0
 mccabe = 0.6.1
+mr.developer = 2.0.1
 ordereddict = 1.1
 pep8-naming = 0.3.3
 pkginfo = 1.2.1
 plone.i18n = 3.0.2
-pycodestyle = 2.3.1
-pyflakes = 1.5.0
+pycodestyle = 2.5.0
+pyflakes = 2.1.1
 Pygments = 2.0.2
 pyroma = 1.8.3
 python-archive = 0.2
@@ -153,16 +159,19 @@ pytz = 2015.7
 readme = 0.6.0
 readme-renderer = 0.7.0
 restructuredtext-lint = 0.12.2
-rubygemsrecipe = 0.2.2
+rubygemsrecipe = 0.3.0
 six = 1.10.0
+slapos.recipe.build = 0.46
+stdlib-list = 0.7.0
 testfixtures = 4.4.0
 transaction = 1.2.0
 Unidecode = 0.4.18
+urllib3 = 1.22
 wheel = 0.26.0
 z3c.dependencychecker = 2.0
 zdaemon = 4.2.0
 zc.recipe.cmmi = 1.3.6
-zc.recipe.egg = 2.0.3
+zc.recipe.egg = 2.0.6
 zc.recipe.testrunner = 2.0.0
 zc.rst2 = 0.2
 WebOb = 1.7.4
@@ -179,14 +188,14 @@ zope.deprecation = 4.3.0
 zope.event = 4.3.0
 zope.exceptions = 4.2.0
 zope.i18n = 4.3.1
-zope.i18nmessageid = 4.1.0
+zope.i18nmessageid = 5.0.1
 zope.interface = 4.4.3
 zope.location = 4.0.3
 zope.pagetemplate = 4.3.0
 zope.proxy = 4.3.0
 zope.publisher = 4.3.2
 zope.schema = 4.5.0
-zope.security = 4.2.1
+zope.security = 5.1.1
 zope.tal = 4.3.0
 zope.tales = 4.2.0
 zope.testing = 4.5.0
